Custom Exceptions; limpeza do código e Enums.